# Lgg_Traffic_Splitting

./: .gitignore  README.md  docs.md  dump.rdb  handoff.md
.github/workflows/: cd.yml  ci.yml
Backend/: README.md  alembic.ini  pyproject.toml  requirements.txt
Backend/alembic/: env.py
Backend/alembic/versions/: 20260519_000001_initial_schema.py  20260519_000002_partition_impressions_and_rollups.py  20260520_000003_add_conversions.py  20260520_000004_add_variant_metadata.py
Backend/app/: main.py
Backend/app/api/: deps.py  router.py
Backend/app/api/routes/: experiments.py  health.py  ingest.py  metrics.py  monitoring.py
Backend/app/core/: config.py  security.py
Backend/app/db/: base.py  session.py
Backend/app/models/: __init__.py  conversion.py  experiment.py  impression.py  impression_rollup.py  variant.py
Backend/app/schemas/: common.py  experiment.py  impression.py
Backend/app/services/: alerts.py  cache.py  cloudflare.py  experiments.py  metrics.py  monitoring.py  partitions.py
Backend/tests/: test_alerts.py  test_config.py  test_experiment_schemas.py  test_multivariate.py  test_significance.py
Backend/traffic_splitting_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
Frontend/: package-lock.json
Frontend/src/: App.css  App.tsx  index.css
Worker/: .dev.vars  .dev.vars.example  README.md  package-lock.json  package.json  wrangler.dev.toml  wrangler.toml
Worker/.wrangler/tmp/bundle-X6S08v/: middleware-loader.entry.ts
Worker/.wrangler/tmp/bundle-qhU9tu/: middleware-insertion-facade.js  (+1 more)
Worker/src/: index.ts
(+8 files in other folders)
